# my_cpp_lib

./: CMakeLists.txt  README.md  main.cpp  testFunc.cpp
header/: testFunc.h  testFunc1.h
src/: main.cpp  testFunc1.cpp  testFunc2.cpp
test2/: testFunc2.h
